# 5piderMan

./: .flake8  .gitignore  Dockerfile  README.md  config.py  connect.py  data_parse.py  lagou.py  lint.sh  main.py  poetry.toml  pyproject.toml  save.py
.github/workflows/: build.yml  docker-and-deploy.yml
backend/: main.py  requirements.txt
backend/static/html/: homepage.html
spider/: lagou.py
src/backend/: ai.py  dao.py  db.py  main.py  models.py  routers.py  schemas.py  services.py
src/backend/config/: __init__.py
tests/backend/databse/: sample.sql  sample_import.py  shuffle.py
web/: index.html  package.json
web/src/: App.jsx  chart.jsx  err-page.jsx  router.jsx
web/src/backend/: job.js
web/src/components/: AIAssistant.jsx
web/src/components/Charts/: BarChart.jsx  BasicPieChart.jsx  DoughnutChart.jsx  HalfPieChart.jsx  NightingaleChart.jsx  PyramidChart.jsx  ScrollablePieChart.jsx  TreeMapChart.jsx
web/src/components/FooterWarp/: index.jsx
web/src/components/JobList/: index.jsx
web/src/components/Link/: index.jsx
web/src/components/Navbar/: index.jsx
web/src/components/SearchBar/: index.jsx
web/src/pages/: analyze.jsx  index.jsx  search.jsx
