[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["5piderMan-Team"]
license = "GPL3"
readme = "README.md"

[tool.poetry.scripts]
backend = "backend.main:main"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
dynaconf = "^3.2.4"
uvicorn = "^0.25.0"
pymysql = "^1.1.0"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
